--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.2.1",
     "font-awesome": "^4.7.0",
     "react": "^16.7.0",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^16.7.0",
     "react-excel-renderer": "^1.0.0",
     "react-scripts": "2.1.3",
